# clawdb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  idea-openclaw.md  idea-zeroclaw.md
.github/workflows/: benchmark.yml  ci.yml  deploy-benchmark.yml
benches/: vector_search.rs
docs/: ADVANCED_OPTIMIZATION.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  DOCUMENTATION.md  GITHUB_ACTIONS_GUIDE.md  IMPLEMENTATION_REPORT.md  OPTIMIZATION.md  PERFORMANCE_VERIFICATION.md  README.md  SYSTEM_SEQUENCE_DIAGRAMS.md
scripts/: download_sift1m.sh
src/: cache.rs  collection.rs  distance.rs  error.rs  hnsw.rs  index.rs  io_limiter.rs  lib.rs  loader.rs  main.rs  vector.rs
src/async_io/: env.rs  fallback.rs  io_uring.rs  mod.rs
src/diskann/: config.rs  mod.rs  quantizer.rs  table_factory.rs
src/plugins/: compaction_filter.rs  merge_operator.rs  mod.rs  slice_transform.rs
src/storage/: advanced_vector_storage.rs  cf.rs  error.rs  mod.rs  storage.rs  vector_storage.rs
