[package]
name = "clawdb"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
ndarray = "0.16"
ndarray-rand = "0.15"
rayon = "1.10"
simsimd = "4.4"
bincode = "1.3"
byteorder = "1.5"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tempfile = "3.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vector_search"
harness = false
